@@ -41,7 +41,7 @@ public class ProblemeEscampe extends Probleme{
             	String[] white = etat.getWhite().clone();
             	String[] black = etat.getBlack().clone();
             	String player = new String(etat.getPlayer());
-            	int lastLisere = new Integer(etat.getLastLisere());
+            	int lastLisere = Integer.valueOf(etat.getLastLisere());
             	
             	//On recupere l'etat resultant d'un coup en modifiant directement les variables d'etat et en simulant un coup
             	eb.simulate_play(m, white, black, player, lastLisere);
